objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Existing_Provider_Contract_Lock_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Provider Contract Lock-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Provider_Last_Updated_Date__c</fullName>
        <label>Existing Provider Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Existing_Provider_Monthly_Spend__c</fullName>
        <label>Existing Provider Monthly Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_Provider_Name__c</fullName>
        <label>Existing Provider Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Provider_Renewal_Date__c</fullName>
        <label>Existing Provider Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Existing_Provider_Satisfaction__c</fullName>
        <label>Existing Provider Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <description>Phone Extension of the lead</description>
        <label>Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalRefID__c</fullName>
        <label>ExternalRefID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Used in PRM for deal registration</description>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Desk_Model__c</fullName>
        <label>Help Desk Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Outsourced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_is_the_lead_getting_benifitted__c</fullName>
        <label>How is the lead getting benifitted</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IOWNACCOUNT__c</fullName>
        <formula>IF (User__c= $User.Id ||
Sales_Person_ID__r.User__r.ManagerId = $User.Id || Sales_Person_ID__r.User__r.Manager.ManagerId = $User.Id  || 
Sales_Person_ID__r.User__r.Manager.Manager.ManagerId = $User.Id
 ,&quot;yes&quot;,&quot;no&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IOWNACCOUNT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Support_Details__c</fullName>
        <label>IT Support Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ITaaS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Managed IT as a Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field Used for Salesforce cleanup for Admins only.  Rep (read only)</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry_Code__c</fullName>
        <formula>CASE( Industry,
&quot;Accounting&quot;,&quot;AC&quot;,
&quot;Business Services&quot;,&quot;BS&quot;,
&quot;Construction/Contractors&quot;,&quot;CO&quot;,
&quot;Engineering/Architecture/Consulting&quot;,&quot;EA&quot;,
&quot;Education/Schools&quot;,&quot;ES&quot;,
&quot;Finance&quot;,&quot;FN&quot;,
&quot;Government&quot;,&quot;GV&quot;,
&quot;Insurance&quot;,&quot;IN&quot;,
&quot;Legal&quot;,&quot;LG&quot;,
&quot;Medical/Health Services&quot;,&quot;MH&quot;,
&quot;Manufacturing/Printing&quot;,&quot;MN&quot;,
&quot;Membership/Organizations&quot;,&quot;OR&quot;,
&quot;Other&quot;,&quot;OT&quot;,
&quot;Real Estate&quot;,&quot;RE&quot;,
&quot;Retail/Restaurants&quot;,&quot;RT&quot;,
&quot;Social Services&quot;,&quot;SS&quot;,
&quot;Transportation/Communications/Utilities&quot;,&quot;UT&quot;,
&quot;Wholesale Trade&quot;,&quot;WT&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiatives__c</fullName>
        <label>Initiatives</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CompuCom: Bus Wireless Plans</fullName>
                </value>
                <value>
                    <fullName>CompuCom: ITAD &amp; Resell</fullName>
                </value>
                <value>
                    <fullName>CompuCom: Lifecycle Services</fullName>
                </value>
                <value>
                    <fullName>CompuCom: Managed Mobile Expenses</fullName>
                </value>
                <value>
                    <fullName>CompuCom: Mobile Services</fullName>
                </value>
                <value>
                    <fullName>Enterprise Pursuit</fullName>
                </value>
                <value>
                    <fullName>Govt - Fed</fullName>
                </value>
                <value>
                    <fullName>GPO - Amerinet</fullName>
                </value>
                <value>
                    <fullName>GPO - MedAssets</fullName>
                </value>
                <value>
                    <fullName>GPO - Novation</fullName>
                </value>
                <value>
                    <fullName>HP Target Account</fullName>
                </value>
                <value>
                    <fullName>Inscape Flip</fullName>
                </value>
                <value>
                    <fullName>Interiors Annuity</fullName>
                </value>
                <value>
                    <fullName>Interiors Pursuit</fullName>
                </value>
                <value>
                    <fullName>K-12 California Department of Education</fullName>
                </value>
                <value>
                    <fullName>K-12 Georgia Vision Project</fullName>
                </value>
                <value>
                    <fullName>K-12 One-to-One Initiatives</fullName>
                </value>
                <value>
                    <fullName>K-12 TCPN Strategy</fullName>
                </value>
                <value>
                    <fullName>TAP</fullName>
                </value>
                <value>
                    <fullName>TCPN - Education</fullName>
                </value>
                <value>
                    <fullName>TCPN - Local/State/Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Teknion Grandfathered</fullName>
                </value>
                <value>
                    <fullName>WIG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsDuplicateAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDuplicateAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JSESSIONID__c</fullName>
        <description>This field is to track sessionID information for leads created on BSD webtolead</description>
        <label>JSESSIONID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__EstimatedRevenue__c</fullName>
        <formula>LBI__Recommendation__r.LBI__MonetaryValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeRating__c</fullName>
        <description>Value of Rating field from associated Recommendation record.</description>
        <formula>LBI__Recommendation__r.LBI__Rank__c</formula>
        <inlineHelpText>Value of Rating field from associated Recommendation record.</inlineHelpText>
        <label>Lattice Recommendation Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeScore__c</fullName>
        <description>Value of Score field from associated Recommendation record.</description>
        <formula>LBI__Recommendation__r.LBI__Likelihood__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value of Score field from associated Recommendation record.</inlineHelpText>
        <label>Lattice Recommendation Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__Recommendation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommendation</label>
        <referenceTo>LBI__Recommendation__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Used in PRM for Deal Registration</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lattice_Lead_Rating__c</fullName>
        <description>Used to provide reps the score that Lattice gave their customer on the play.</description>
        <label>Lattice Lead Rating</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lattice_Lead_Score_Date__c</fullName>
        <label>Lattice Lead Score Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lattice_Lead_Score__c</fullName>
        <label>Lattice Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadAgeByYear__c</fullName>
        <formula>(TODAY () - DATEVALUE(CreatedDate)) / 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadAgeByYear</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadLifecycle__c</fullName>
        <label>Lead Lifecycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Penetration</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Win Back</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadStaging__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LeadStaging</label>
        <referenceTo>LeadStaging__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_72_Hour_Reassignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead 72 Hour Reassignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_72_Hr_Assigned_Date__c</fullName>
        <label>Lead 72 Hr Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_72_Hr_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lead 72 Hr Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Address__c</fullName>
        <description>This is used in Reports for full address</description>
        <formula>Address1__c +&apos;, &apos; + Address2__c + &apos;, &apos;+City__c + &apos;, &apos;+TEXT(State__c) + &apos; &apos;+Zip__c</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Age__c</fullName>
        <formula>IF(ISPICKVAL(Status , &quot;Open&quot;), ROUND(NOW()-CreatedDate,0),  
IF(ISPICKVAL(Status , &quot;Contacted&quot;), ROUND(NOW()-CreatedDate,0),  

IF(NOT(ISPICKVAL(Status , &quot;Open&quot;)), Closed_Date__c - datevalue(CreatedDate),0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Channel__c</fullName>
        <formula>CASE(LeadSource, 
&apos;TZ: Account Management&apos;, &apos;Field Rep&apos;, 
&apos;TZ: BSD Mailstream&apos;, &apos;Customer Mining&apos;, 
&apos;TZ: BSD Referral&apos;, &apos;BSD&apos;, 
&apos;TZ: Business Pro Referral&apos;, &apos;Business Pro&apos;, 
&apos;TZ: Chamber of Commerce&apos;, &apos;Field Rep&apos;, 
&apos;TZ: Channel Alternate&apos;, &apos;Indirect&apos;, 
&apos;TZ: Channel Partner&apos;, &apos;Indirect&apos;, 
&apos;TZ: CompuCom Chat&apos;, &apos;Marketing&apos;, 
&apos;TZ: CompuCom Phone&apos;, &apos;Marketing&apos;, 
&apos;TZ: CompuCom Referral&apos;, &apos;Field Rep&apos;, 
&apos;TZ: CompuCom Website&apos;, &apos;Marketing&apos;, 
&apos;TZ: Content Syndication&apos;, &apos;Marketing&apos;,
&apos;TZ: Customer Referral Form&apos;, &apos;Store&apos;, 
&apos;TZ: Direct Mail&apos;, &apos;Marketing&apos;,
&apos;TZ: Email Marketing&apos;, &apos;Marketing&apos;, 
&apos;TZ: Event&apos;, &apos;Marketing&apos;, 
&apos;TZ: Grand &amp; Toy Referral&apos;, &apos;Grand &amp; Toy&apos;, 
&apos;TZ: Marketopia&apos;, &apos;Prospecting&apos;, 
&apos;TZ: Office Depot Website&apos;, &apos;Online&apos;, 
&apos;TZ: Other&apos;, &apos;Field Rep&apos;, 
&apos;TZ: Paid Display&apos;, &apos;Marketing&apos;,
&apos;TZ: Paid Social&apos;, &apos;Marketing&apos;,
&apos;TZ: PPC&apos;, &apos;Marketing&apos;,
&apos;TZ: Reveneer&apos;, &apos;Prospecting&apos;, 
&apos;TZ: Self&apos;, &apos;Field Rep&apos;, 
&apos;TZ: Store Associate Referral&apos;, &apos;Store&apos;, 
&apos;TZ: Store Visitor&apos;, &apos;Store&apos;, 
&apos;TZ: Telemarketing&apos;, &apos;Marketing&apos;, 
&apos;TZ: TZ BDR&apos;, &apos;Prospecting&apos;, 
&apos;TZ: TZ Chat&apos;, &apos;Marketing&apos;,
&apos;TZ: TZ Phone&apos;, &apos;Marketing&apos;,
&apos;TZ: TZ Technician&apos;, &apos;Marketing&apos;, 
&apos;TZ: TZ Website&apos;, &apos;Marketing&apos;, 
&apos;TZ: Webinar&apos;, &apos;Marketing&apos;,
&apos;Other&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Duplicates__c</fullName>
        <label>Lead Duplicates</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lead_Flag__c</fullName>
        <formula>&quot;True&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_ID_Case_Safe__c</fullName>
        <label>Lead ID (Case Safe)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead_Import_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lead Import ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <displayFormat>L{0}</displayFormat>
        <externalId>true</externalId>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_District__c</fullName>
        <formula>Text(  Owner:User.Tech_Zone_District__c  )</formula>
        <label>Lead Owner District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Email__c</fullName>
        <formula>Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Name__c</fullName>
        <formula>If(CONTAINS( LEFT(Owner:Queue.Id,3), &quot;00G&quot;), Owner:Queue.Name, Owner:User.Full_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Page_Source__c</fullName>
        <label>Lead Page Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Response_Time__c</fullName>
        <label>Lead Response Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <description>Additional detail such as a list name supplementing the value captured in the Lead Source fields.</description>
        <label>Lead Source Detail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web Lead</fullName>
                </value>
                <value>
                    <fullName>Store Lead</fullName>
                    <default>true</default>
                    <label>Store Lead</label>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>One Source</fullName>
                </value>
                <value>
                    <fullName>Business Pro</fullName>
                </value>
                <value>
                    <fullName>FOS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Sub_Source__c</fullName>
        <label>Lead Sub-Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employee Referral Program</fullName>
                </value>
                <value>
                    <fullName>Customer Referral</fullName>
                </value>
                <value>
                    <fullName>Friend/Family Referral</fullName>
                </value>
                <value>
                    <fullName>Walk-in</fullName>
                </value>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Networking Event</fullName>
                </value>
                <value>
                    <fullName>Avention/D&amp;B Hoovers</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Demo Request</fullName>
                </value>
                <value>
                    <fullName>Inbound Call</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_CreatedBy__c</fullName>
        <label>Legacy CreatedBy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_CreatedDate__c</fullName>
        <label>Legacy CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_LastModifiedBy__c</fullName>
        <label>Legacy LastModifiedBy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_LastModifiedDate__c</fullName>
        <label>Legacy LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Logo_Design_Buying__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Buying</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logo_Design_Interest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Low_level_industry__c</fullName>
        <label>Low level industry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Interest__c</fullName>
        <label>Marketing Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Opt_In__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Marketing Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketview_URL__c</fullName>
        <label>Marketview Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Master_Agent_Name_T__c</fullName>
        <formula>Sub_Agent__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Agent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Agent_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Agent Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Prospect (Tech-Zone), Customer (Tech-Zone)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Master Agent Name)</relationshipLabel>
        <relationshipName>MasterAgent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Agent_Number__c</fullName>
        <formula>Sub_Agent__r.Parent.Account_Number__c</formula>
        <label>Master Agent Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The master/parent lead to a group of related leads.</description>
        <inlineHelpText>The master/parent lead to a group of related leads.</inlineHelpText>
        <label>Master Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MindMatrix__AMP_Contact_Status__c</fullName>
        <description>AMP Contact Status</description>
        <formula>IMAGE(CASE(  MindMatrix__Interest_Level__c, 
&quot;&quot;, LEFT($Api.Enterprise_Server_URL_260, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_260) -1)  +&quot;/resource/MindMatrix__NotSureStatusIconLead&quot; ,
&quot;Other&quot;, LEFT($Api.Enterprise_Server_URL_260, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_260) -1)  +&quot;/resource/MindMatrix__OtherStatusIconLead&quot;,
&quot;Closed&quot;, LEFT($Api.Enterprise_Server_URL_260, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_260) -1)  +&quot;/resource/MindMatrix__ClosedStatusIconLead&quot;,
&quot;Hot&quot;, LEFT($Api.Enterprise_Server_URL_260, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_260) -1)  +&quot;/resource/MindMatrix__HotStatusIconLead&quot;,
&quot;High&quot;, LEFT($Api.Enterprise_Server_URL_260, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_260) -1)  +&quot;/resource/MindMatrix__HighStatusIconLead&quot;,
&quot;Medium&quot;, LEFT($Api.Enterprise_Server_URL_260, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_260) -1)  +&quot;/resource/MindMatrix__MediumStatusIconLead&quot;,
&quot;Low&quot;, LEFT($Api.Enterprise_Server_URL_260, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_260) -1)  +&quot;/resource/MindMatrix__LowStatusIconLead&quot;, 
&quot;Not Interested&quot;, LEFT($Api.Enterprise_Server_URL_260, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_260) -1)  +&quot;/resource/MindMatrix__NotInterestedStatusIconLead&quot;,
&quot;Not Sure&quot;, LEFT($Api.Enterprise_Server_URL_260, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_260) -1)  +&quot;/resource/MindMatrix__NotSureStatusIconLead&quot;,
&quot;/s.gif&quot;), &quot;Priority Flag&quot;)</formula>
        <inlineHelpText>AMP Contact Status</inlineHelpText>
        <label>AMP Lead Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MindMatrix__Interest_Level__c</fullName>
        <description>AMP interest level</description>
        <label>AMP Interest Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Not Sure</fullName>
                    <default>true</default>
                    <label>Not Sure</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MindMatrix__Nurture_Lead__c</fullName>
        <label>Nurture Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MindMatrix__Recipient_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient List</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MindMatrix__AMP_Recipient_List__c.OwnerId</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MindMatrix__AMP_Recipient_List__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modified__c</fullName>
        <formula>CreatedDate &lt;&gt;  LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Subscription__c</fullName>
        <formula>&quot;$&quot; + Text(IF(ITaaS__c &amp;&amp; Business_Services__c, ((Number_of_Users__c * 39))  ,    
(IF(ITaaS__c &amp;&amp; !Business_Services__c, (Number_of_Users__c * 39) ,
    (IF(!ITaaS__c &amp;&amp; Business_Services__c, 0 ,
       (IF(!(ITaaS__c &amp;&amp; !Business_Services__c),0,0) )))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Subscription</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NID_numeric__c</fullName>
        <label>NID_numeric</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Date_time__c</fullName>
        <label>New Date time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NextStep__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Touched_in_48_hrs__c</fullName>
        <formula>IF(Lead_Age__c &gt; 2,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Touched in 48 hrs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Num_Desktops__c</fullName>
        <label># Desktops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Full_Time_IT_Staff__c</fullName>
        <label># Full-Time IT Staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Laptops__c</fullName>
        <label># Laptops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Mobile_Phones__c</fullName>
        <label># Mobile Phones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Physical_Servers__c</fullName>
        <label># Physical Servers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Total_Servers__c</fullName>
        <label># Total Servers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Users__c</fullName>
        <label>Number of Employees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OD_Account_ID__c</fullName>
        <label>OD Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OD_Customer_ID__c</fullName>
        <label>OD Customer ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OD_Opportunity_ID__c</fullName>
        <label>OD Opportunity ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneSource__OSKeyID__c</fullName>
        <description>The OSKeyID is OneSource’s unique company identifier.  It is a required field and, in Salesforce Professional Edition, must be visible and available on page layouts for all users.</description>
        <externalId>true</externalId>
        <label>OSKeyID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
</CustomObject>